.devcontainer/local-ansible/k8s/longhorn/middleware-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-permanent
  namespace: longhorn-system
spec:
  redirectScheme:
    permanent: true
    scheme: https
