.devcontainer/local-ansible/k8s/longhorn/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-server
  namespace: longhorn-system
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host("longhorn.127.0.0.1.sslip.io")
    services:
    - name: longhorn-frontend
      port: 80
    middlewares:
    - name: redirect-permanent
